--- a/datanode-alpha/krb5.conf
+++ b/datanode-alpha/krb5.conf
@@ -9,7 +9,7 @@
  dns_lookup_kdc = false
  ticket_lifetime = 24h
  renew_lifetime = 7d
- forwardable = false
+ forwardable = true
  krb5.forcetcp = true
  udp_preference_limit = 1
 
