--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update && \
         krb5-user \
         libpam-krb5 \
         libpam-ccreds \
+        openssl \
     && rm -rf /var/lib/apt/lists/*
 
 # Kerberos configuration
@@ -26,6 +27,10 @@ RUN mkdir -p /etc/security/keytabs
 RUN mkdir -p /etc/hadoop/ssl
 RUN chmod -R 444 /etc/hadoop/ssl
 COPY ssl-server.xml /etc/hadoop/ssl-server.xml
+COPY ssl-client.xml /etc/hadoop/ssl-client.xml
+
+# Create http signature file
+# RUN openssl rand -base64 256 > /etc/hadoop/ssl/hadoop-http-auth-signature-secret
 
 # Add jboss user to HDFS
 RUN addgroup pegacorn
