--- a/kdc/krb5.conf
+++ b/kdc/krb5.conf
@@ -9,7 +9,7 @@
  dns_lookup_kdc = false
  ticket_lifetime = 24h
  renew_lifetime = 7d
- forwardable = false
+ forwardable = true
  spake_preauth_groups = edwards25519
  krb5.forcetcp = true
  udp_preference_limit = 1
