--- a/datanode-beta/Dockerfile
+++ b/datanode-beta/Dockerfile
@@ -40,6 +40,8 @@ ARG IMAGE_BUILD_TIMESTAMP
 ENV IMAGE_BUILD_TIMESTAMP=${IMAGE_BUILD_TIMESTAMP}
 RUN echo IMAGE_BUILD_TIMESTAMP=${IMAGE_BUILD_TIMESTAMP}
 
+ENV SERVER_ADDRESS=pegacorn-fhirplace-datanode-beta-0.pegacorn-fhirplace-datanode-beta.site-a.svc.cluster.local
+
 # Hadoop ports
 EXPOSE 9865 9866 9867
 
