--- a/datanode-beta/krb5.conf
+++ b/datanode-beta/krb5.conf
@@ -11,7 +11,7 @@
  renew_lifetime = 7d
  forwardable = false
  krb5.forcetcp = true
- udp_preference_limit = 1
+ spake_preauth_groups = edwards25519
 
 [realms]
  realmValue = {
