--- a/namenode/krb5.conf
+++ b/namenode/krb5.conf
@@ -11,6 +11,7 @@
  renew_lifetime = 7d
  forwardable = true
  krb5.forcetcp = true
+ spake_preauth_groups = edwards25519
  
 [realms]
  realmValue = {
