--- a/datanode-alpha/Dockerfile
+++ b/datanode-alpha/Dockerfile
@@ -41,6 +41,8 @@ ARG IMAGE_BUILD_TIMESTAMP
 ENV IMAGE_BUILD_TIMESTAMP=${IMAGE_BUILD_TIMESTAMP}
 RUN echo IMAGE_BUILD_TIMESTAMP=${IMAGE_BUILD_TIMESTAMP}
 
+ENV SERVER_ADDRESS=pegacorn-fhirplace-datanode-alpha-0.pegacorn-fhirplace-datanode-alpha.site-a.svc.cluster.local
+
 # Hadoop ports
 EXPOSE 9865 9866 9867
 
