--- a/datanode-beta/krb5.conf
+++ b/datanode-beta/krb5.conf
@@ -9,12 +9,19 @@
  dns_lookup_kdc = false
  ticket_lifetime = 24h
  renew_lifetime = 7d
- forwardable = false
- krb5.forcetcp = true
+ forwardable = true
  spake_preauth_groups = edwards25519
-
+ kdc_timesync = 1
+ ccache_type = 4
+ proxiable = true
+ udp_preference_limit = 1
+ 
 [realms]
  realmValue = {
   kdc = kdcserver
   admin_server = kdcadmin
  }
+
+ [domain_realm]
+    .pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
+    pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
