--- a/datanode-alpha/krb5.conf
+++ b/datanode-alpha/krb5.conf
@@ -10,11 +10,18 @@
  ticket_lifetime = 24h
  renew_lifetime = 7d
  forwardable = true
- krb5.forcetcp = true
  spake_preauth_groups = edwards25519
-
+ kdc_timesync = 1
+ ccache_type = 4
+ proxiable = true
+ udp_preference_limit = 1
+ 
 [realms]
  realmValue = {
   kdc = kdcserver
   admin_server = kdcadmin
  }
+
+ [domain_realm]
+    .pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
+    pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
