--- a/datanode-beta/helm/templates/deployment.yaml
+++ b/datanode-beta/helm/templates/deployment.yaml
@@ -89,7 +89,7 @@ spec:
         - name: NAMENODE_HOST
           value: {{ .Values.namenodeHost }}
         - name: REALM
-          value: PEGACORN-FHIRPLACE-AUDIT.LOCAL
+          value: REALM.TLD
         # Set the minimum memory that will be available on the node to assign to the container to be the jvmMaxHeapSizeMB plus 128 MB 
         # for the native heap and operation system processes associated with running Java
         # See https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/#motivation-for-memory-requests-and-limits
