--- a/namenode/helm/templates/deployment.yaml
+++ b/namenode/helm/templates/deployment.yaml
@@ -79,7 +79,7 @@ spec:
         - name: CLUSTER_NAME
           value: {{ .Values.clusterName }}
         - name: REALM
-          value: PEGACORN-FHIRPLACE-AUDIT.LOCAL
+          value: REALM.TLD
         # Set the minimum memory that will be available on the node to assign to the container to be the jvmMaxHeapSizeMB plus 128 MB 
         # for the native heap and operation system processes associated with running Java
         # See https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/#motivation-for-memory-requests-and-limits
