Finalised browser SPNEGO authentication

--- a/namenode/krb5.conf
+++ b/namenode/krb5.conf
@@ -23,5 +23,7 @@
  }
 
  [domain_realm]
-    .pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
-    pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
+    .site-a = realmValue
+    site-a = realmValue
+    .svc.cluster.local = REALM.TLD
+    svc.cluster.local = REALM.TLD
