--- a/kdc/krb5.conf
+++ b/kdc/krb5.conf
@@ -20,5 +20,7 @@
  }
 
 [domain_realm]
- .kdcserver = realmValue
- kdcserver = realmValue
+ .site-a = realmValue
+ site-a = realmValue
+ .svc.cluster.local = realmValue
+ svc.cluster.local = realmValue
