--- a/datanode-alpha/Dockerfile.debian
+++ b/datanode-alpha/Dockerfile.debian
@@ -1,8 +1,23 @@
 FROM fhirfactory/pegacorn-base-hadoop:1.0.0
 
 # Install Kerberos client
-RUN apk add --update --no-cache krb5 \
-    && rm -rf /var/cache/apk/*
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+        krb5-user \
+        libpam-krb5 \
+        libpam-ccreds \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install multiple network diagnostic tools
+RUN apt-get update && \
+    apt-get install -y \
+    iputils-ping \
+    telnet \
+    net-tools \
+    traceroute \
+    dnsutils \
+    tzdata \
+    && rm -rf /var/lib/apt/lists/*  # Clean up to reduce layer size
 
 HEALTHCHECK CMD curl -f http://localhost:9864/ || exit 1
 
@@ -14,9 +29,6 @@ ENV TZ="Australia/Sydney"
 
 RUN mkdir -p /hadoop/dfs/datanode
 
-# Create a group and user and disable user login
-RUN addgroup -g 1000 -S jboss && adduser -u 1000 -S jboss -G jboss -D -s /sbin/nologin jboss
-
 # Kerberos configuration
 COPY krb5.conf /etc/krb5.conf
 RUN mkdir -p /var/log/kerberos
@@ -24,13 +36,11 @@ RUN mkdir -p /etc/security/keytabs
 RUN mkdir -p /etc/hadoop/ssl
 RUN chmod -R 444 /etc/hadoop/ssl
 COPY ssl-server.xml /etc/hadoop/ssl-server.xml
+COPY ssl-client.xml /etc/hadoop/ssl-client.xml
 
 ARG IMAGE_BUILD_TIMESTAMP
 ENV IMAGE_BUILD_TIMESTAMP=${IMAGE_BUILD_TIMESTAMP}
 RUN echo IMAGE_BUILD_TIMESTAMP=${IMAGE_BUILD_TIMESTAMP}
-
-# Hadoop ports
-EXPOSE 9865 9866 9867
 
 COPY run.sh /run.sh
 RUN chmod a+x /run.sh
