--- a/datanode-alpha/helm/templates/deployment.yaml
+++ b/datanode-alpha/helm/templates/deployment.yaml
@@ -1,146 +1,128 @@
 ---
-apiVersion: apps/v1 
-kind: StatefulSet
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  annotations:
-    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project={{ .Values.serviceName }}&var-version={{ .Values.imageTag }}
+  name: {{ .Values.serviceName }}
   labels:
     app: {{ .Values.serviceName }}
     version: "{{ .Values.imageTag }}"
-  name: {{ .Values.serviceName }}
 spec:
-  serviceName: {{ .Values.serviceName }}
   replicas: {{ .Values.numOfPods | default 2 }}
-  revisionHistoryLimit: 2
   selector:
     matchLabels:
       app: {{ .Values.serviceName }}
   template:
     metadata:
-      annotations:
-        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project={{ .Values.serviceName }}&var-version={{ .Values.imageTag }}
       labels:
         app: {{ .Values.serviceName }}
         version: "{{ .Values.imageTag }}"
-        date: "{{ date "20060102-150405" .Release.Time }}"
     spec:
-      {{- if (.Values.acrSecretName) }} 
+      {{- if (.Values.acrSecretName) }}
       imagePullSecrets:
         - name: {{ .Values.acrSecretName }}
       {{- end }}
-#      affinity:
-#        nodeAffinity:
-#          preferredDuringSchedulingIgnoredDuringExecution:
-#          - weight: 1
-#            preference:
-#              matchExpressions:
-#              - key: computeResources
-#                operator: In
-#                values:
-#                - High
-      containers:
-      - env:
-        - name: TRUSTSTORE_PASSWORD
-          valueFrom:
-           secretKeyRef:
-            name: {{ .Values.serviceName }}-secrets
-            key: truststorePassword
-        - name: KEY_PASSWORD
-          valueFrom:
-           secretKeyRef:
-            name: {{ .Values.serviceName }}-secrets
-            key: keyPassword
-        - name: KUBERNETES_SERVICE_NAME
-          value: {{ .Values.serviceName }}
-        - name: {{ upper .Values.serviceName | replace "-" "_" }}_{{ upper .Release.Namespace | replace "-" "_" }}_KUBERNETES_SERVICE_NAME
-          value: {{ .Values.serviceName }}
-        - name: KUBERNETES_NAMESPACE
-          value: {{ .Release.Namespace }}
-        - name: {{ upper .Values.serviceName | replace "-" "_" }}_{{ upper .Release.Namespace | replace "-" "_" }}_KUBERNETES_NAMESPACE
-          value: {{ .Release.Namespace }}
-        - name: HELM_RELEASE_TIME
-          value: "{{ date "20060102-150405" .Release.Time }}"
-        - name: MY_HOST_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.hostIP
-        - name: MY_NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: MY_POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: MY_POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: MY_POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        - name: MY_POD_SERVICE_ACCOUNT
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.serviceAccountName
-        - name: JVM_MAX_HEAP_SIZE
-          value: "{{ .Values.jvmMaxHeapSizeMB }}m"
-        - name: NAMENODE_HOST
-          value: {{ .Values.namenodeHost }}
-        - name: REALM
-          value: REALM.TLD
-        # Set the minimum memory that will be available on the node to assign to the container to be the jvmMaxHeapSizeMB plus 128 MB 
-        # for the native heap and operation system processes associated with running Java
-        # See https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/#motivation-for-memory-requests-and-limits
-        # and https://www.alibabacloud.com/blog/kubernetes-demystified-restrictions-on-java-application-resources_594108
-        resources:
-          requests:
-            memory: "{{ add 128 .Values.jvmMaxHeapSizeMB }}Mi"
-        image: {{ .Values.dockerRepo }}pegacorn-fhirplace-datanode-alpha:{{ .Values.imageTag }}            
-        imagePullPolicy: {{ .Values.imagePullPolicy | default "IfNotPresent" }}
-        livenessProbe:
-          tcpSocket:
-            port: 9865
-          initialDelaySeconds: 15
-        name: hadoop-datanode
-        ports:
-        - containerPort: 9779
-          name: prometheus
-          protocol: TCP
-        - containerPort: 8778
-          name: jolokia
-          protocol: TCP
-        - containerPort: 9865
-          name: datanode
-          protocol: TCP
-        - containerPort: 9866
-          name: data-transfer
-          protocol: TCP
-        - containerPort: 9867
-          name: ipc-metadata
-          protocol: TCP
-        readinessProbe:
-          tcpSocket:
-            port: 9865
-          initialDelaySeconds: 15
-        securityContext:
-          privileged: false
-        volumeMounts:
-        - name: datanode-dir
-          mountPath: /hadoop/dfs/datanode
-        - name: keytabs
-          mountPath: /etc/security/keytabs
-        - name: config
-          mountPath: /etc/hadoop/ssl
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | default 30 }}
       volumes:
-      - name: datanode-dir
-        hostPath:
-          path: {{ .Values.hostPathDatanode }}
-      - name: keytabs
-        hostPath:
-          path: {{ .Values.hostPathKeytab }}
-      - name: config
-        hostPath:
-          path: {{ .Values.hostPathConfig }}
+        - name: datanode-dir
+          hostPath:
+            path: {{ .Values.hostPathDatanode }}
+        - name: admin-keytab  # ✅ Ensure correct naming
+          hostPath:
+            path: {{ .Values.hostPathKeytab }}  # Persist admin keytab for sidecar only
+        - name: config
+          hostPath:
+            path: {{ .Values.hostPathConfig }}
+        - name: hdfs-keytabs
+          emptyDir: {}  # Temporary volume for dynamically generated keytabs
+      containers:
+        - name: hadoop-datanode
+          image: {{ .Values.dockerRepo }}pegacorn-fhirplace-datanode-alpha:{{ .Values.imageTag }}
+          imagePullPolicy: {{ .Values.imagePullPolicy | default "IfNotPresent" }}
+          env:
+            - name: TRUSTSTORE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.serviceName }}-secrets
+                  key: truststorePassword
+            - name: KEY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.serviceName }}-secrets
+                  key: keyPassword
+            - name: REALM
+              value: REALM.TLD
+            - name: CLUSTER_NAME
+              value: {{ .Values.clusterName }}
+            - name: HELM_RELEASE_TIME
+              value: "{{ date "20060102-150405" .Release.Time }}"
+            - name: KUBERNETES_SERVICE_NAME
+              value: {{ .Values.serviceName }}
+            - name: KUBERNETES_NAMESPACE
+              value: {{ .Release.Namespace }}
+            - name: NAMENODE_HOST
+              value: {{ .Values.namenodeHost }}
+            - name: MY_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: MY_POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: MY_POD_SERVICE_ACCOUNT
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.serviceAccountName
+          ports:
+            - containerPort: 9865
+              name: datanode
+            - containerPort: 9866
+              name: data-transfer
+            - containerPort: 9867
+              name: ipc-metadata
+          livenessProbe:
+            tcpSocket:
+              port: 9865
+            initialDelaySeconds: 15
+          readinessProbe:
+            tcpSocket:
+              port: 9865
+            initialDelaySeconds: 15
+          volumeMounts:
+            - name: datanode-dir
+              mountPath: /hadoop/dfs/datanode
+            - name: hdfs-keytabs
+              mountPath: /etc/security/hdfs-keytabs
+            - name: config
+              mountPath: /etc/hadoop/ssl
+        # ------------------------ #
+        # Sidecar for Keytab Management
+        # ------------------------ #
+        - name: kerberos-sidecar
+          image: {{ .Values.dockerRepo }}kerberos-sidecar-dna:{{ .Values.imageTag }}
+          env:
+            - name: REALM
+              value: REALM.TLD
+            - name: KUBERNETES_SERVICE_NAME
+              value: {{ .Values.serviceName }}
+            - name: KUBERNETES_NAMESPACE
+              value: {{ .Release.Namespace }}
+            - name: HELM_RELEASE_TIME
+              value: "{{ date "20060102-150405" .Release.Time }}"
+            - name: MY_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: MY_POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: MY_POD_SERVICE_ACCOUNT
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.serviceAccountName
+          volumeMounts:
+            - name: hdfs-keytabs
+              mountPath: /etc/security/hdfs-keytabs # Stores dynamically generated keytabs
+            - name: admin-keytab  # ✅ Matches the volume name above
+              mountPath: /etc/security/admin-keytab
