--- a/datanode-beta/krb5.conf
+++ b/datanode-beta/krb5.conf
@@ -22,6 +22,11 @@
   admin_server = kdcadmin
  }
 
- [domain_realm]
-    .pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
-    pegacorn-fhirplace-kdcserver.site-a.svc.cluster.local = realmValue
+[domain_realm]
+ .site-a = realmValue
+ site-a = realmValue
+ .svc.cluster.local = realmValue
+ svc.cluster.local = realmValue
+
+[plugins]
+ disable_pkinit = true
