--- a/namenode/krb5.conf
+++ b/namenode/krb5.conf
@@ -22,8 +22,11 @@
   admin_server = kdcadmin
  }
 
- [domain_realm]
-    .site-a = realmValue
-    site-a = realmValue
-    .svc.cluster.local = REALM.TLD
-    svc.cluster.local = REALM.TLD
+[domain_realm]
+ .site-a = realmValue
+ site-a = realmValue
+ .svc.cluster.local = realmValue
+ svc.cluster.local = realmValue
+
+[plugins]
+ disable_pkinit = true
